2016-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c:
	  Fix bug #2522.
	* device/lib/stm8/memcpy.s,
	  device/lib/stm8/strcmp.s,
	  device/lib/*/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/incl.mk:
	  Provide handwritten memcpy(), strcmp() to improve stm8 Dhrystone scores.

2016-07-10 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90/t90mch.c:
	  Fix TLCS-90 assembler relocation issue, bug #2520.

2016-07-06 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-920612-1.c
	  Disabled in test-host with gcc-6.

2016-06-30 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Check pointer qualifier in geniCodeReturn().
	* device/lib/_strstr.c
	* device/lib/_strchr.c
	* device/lib/_strrchr.c
	* support/regression/tests/gcc-torture-execute-920429-1.c
	  Supress warning 196.

2016-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/ds390/gen.c
	  Fix a bug in genCmp().
	* support/regression/tests/dhrystone.c
	  Enabled for ds390.

2016-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Fix bug #1841.
	* device/include/stdbool.h:
	  Minor cleanup.

2016-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCsymt.c:
	  Remove obsolete SDCC macro, --short-is-8-bits option.

2016-06-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/gen.c
	  Fix a bug in jump table of switch/case when --acall-ajmp is specified.
	* src/mcs51/peeph.def
	  Remove empty lines.

2016-06-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/ports/mcs51-huge/spec.mk
	* support/regression/ports/mcs51-xstack-auto/spec.mk
	  Make "make" more compatible.

2016-06-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/ucr2k/support.asm:
	  Fix regression test putchar() for r2k.

2016-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdio.h,
	  device/lib/ds390/putchar.c,